feat: Add GUI command and update TabCompleter